[package]
name = "oasis-module-bridge"
version = "0.1.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
oasis-runtime-sdk = { path = "../runtime-sdk" }
# TODO: Use specific tag.
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", branch = "kostko/feature/runtime-sdk-updates" }

# Third party.
serde = { version = "1.0.118", features = ["derive"] }
thiserror = "1.0"
