[package]
name = "oasis-runtime-sdk"
version = "0.1.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
# TODO: Use specific tag.
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", branch = "kostko/feature/runtime-sdk-updates" }

# Third party.
serde = { version = "1.0.118", features = ["derive"] }
serde_bytes = "0.11.5"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
k256 = { version = "0.6.0", features = ["ecdsa", "sha256"] }
thiserror = "1.0"
hex = "0.4.2"
io-context = "0.2.0"
anyhow = "1.0"
bech32 = "0.7.2"
phf = { version = "0.8.0", features = ["macros"] }
