[package]
name = "oasis-bridge-runtime"
version = "0.1.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[[bin]]
name = "oasis-bridge-runtime"

[dependencies]
oasis-runtime-sdk = { path = "../runtime-sdk" }
# TODO: Use specific tag.
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", branch = "kostko/feature/runtime-sdk-updates" }

# Modules.
oasis-module-bridge = { path = "../module-bridge" }
